chore(docs): update meta data, bib refs and index

--- a/docs/repetitorium/part three/Einführung/index.tex
+++ b/docs/repetitorium/part three/Einführung/index.tex
@@ -2,6 +2,7 @@
 
 
 \input{part three/Einführung/lernziele}
+\newpage
 \input{part three/Einführung/einsatzziele von uml 2.0 modellen in der softwareentwicklung}
 \input{part three/Einführung/sprachaufbau der uml 2.0}
 \input{part three/Einführung/diagrammübersicht}
