docs: update section zusammenfassung

--- a/docs/repetitorium/part three/Klassendiagramme/index.tex
+++ b/docs/repetitorium/part three/Klassendiagramme/index.tex
@@ -6,7 +6,7 @@
 
 \input{part three/Klassendiagramme/einsatzbereich}
 \input{part three/Klassendiagramme/begriffe und elemente}
-
+\input{part three/Klassendiagramme/zusammenfassung}
 
 \newpage
 
