docs: add LSP glossary entry

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -433,3 +433,11 @@ and Rundshagen, Michael",
     url = {http://www.omg.org/spec/UML/2.5.1},
     year = 2017
 }
+
+@article{Lis87,
+    title={Keynote address - data abstraction and hierarchy},
+    DOI={10.1145/62138.62141},
+    journal={Addendum to the proceedings on Object-oriented programming systems, languages and applications (Addendum) - OOPSLA ’87},
+    author={Liskov, Barbara},
+    year={1987}
+}
