--- a/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
@@ -175,7 +175,7 @@ Für \textcolor{blue}{Parameter} gilt:\\
 
 \noindent
 Die Bedeutung einzelner Angaben bei der Spezifikation lassen sich bereits aus der weiter oben eingeführten \textbf{Attributnotation} ableiten.\\
-Die \textbf{Übergaberichtung} gibt ab, wie ein Parameter verarbeitet wird.
+Die \textbf{Übergaberichtung} gibt an, wie ein Parameter verarbeitet wird.
 Mögliche Werte sind
 
 \begin{itemize}
@@ -220,19 +220,16 @@ Vor- und Nachbedingungen können auch in OCL formuliert und in einer Textdatei a
 Neben der Darstellung von Klassen können auch \textbf{Generalisierungs}- und \textbf{Abhängigkeitsbeziehungen} in einem Klassendiagramm modelliert werden.\\
 
 \noindent
-Dabei ist die \textbf{Generalisierung} ein zentrales Konzept des objektorientierten Designs - der grundlegende Gedanke hier ist, dass alle \textit{vererbbaren} Features eines \textbf{Supertyps} auf den \textbf{Subtyp} übergehen (\textbf{Vererbung}).\\
+Dabei ist die \textbf{Generalisierung} ein zentrales Konzept des objektorientierten Designs - der grundlegende Gedanke hier ist, dass alle \textit{vererbbaren} Features\footnote{
+``charakteristische Merkmale`` (\cite[17]{Buh09})
+} eines \textbf{Supertyps} auf den \textbf{Subtyp} übergehen (\textbf{Vererbung}).\\
 
 \noindent
 Wird \textbf{Generalisierung} verwendet, kann man das Ergebnis anhand des \textbf{Liskovschen Substitutionsprinzips} (\textit{Ersetzbarkeitsprinzip}) überprüfen, das besagt, dass Objekte der abgeleiteten Klasse stets an Stelle der Oberklasse treten können müssen.\\
 
 \noindent
-Im weiteren Sprachgebrauch wird zwischen \textbf{Subtyping} (\textit{Schnittstellenvererbung}) und \textbf{Subclassing} (\textit{Implementierungsvererbung}) unterschieden.
-Das Substitutionsprinzip gilt nur für die Implementierungsvererbung und hier nur für die konkrete Klasse (vgl.~\cite[26]{Buh09}).\\
-
-
-\begin{tcolorbox}[title=Subtyping und Subclassing,colback=red!20]
-    tbd.
-\end{tcolorbox}
+Im weiteren Sprachgebrauch wird zwischen \textbf{Subtyping} (\textit{Schnittstellenvererbung}) und \textbf{Subclassing} (\textit{Implementierungsvererbung}) unterschieden:
+Das Substitutionsprinzip gilt nur für die \textit{Implementierungsvererbung} und hier nur für die konkrete Klasse (vgl.~\cite[26]{Buh09}).\\
 
 \noindent
 Generalisierungen können in Gruppen zusammengefasst werden, die weitere Eigenschaften besitzen können:
