docs: add chapter Sequenzdiagramme and Lernziele

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -183,7 +183,7 @@
 
 	\end{center}}							% Autor der Arbeit
 	\address{\begin{center}
-				 \small{01.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
+				 \small{03.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
 	\end{center}} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
 	\submitdate{} 				% Abgabedatum
 %\begingroup
@@ -222,6 +222,7 @@
 	\input{part three/teil3}
 	\input{part three/Einführung/index}
 	\input{part three/Klassendiagramme/index}
+	\input{part three/Sequenzdiagramme/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
