docs: add section begriffe und elemente

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -423,7 +423,7 @@ and Rundshagen, Michael",
     publisher = {Petrocelli/Charter}
 }
 
-@standard{UML17,
+@standard{OMG17,
     author = {OMG},
     institution = {Object Management Group},
     keywords = {UML},
