--- a/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
+++ b/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
@@ -2,7 +2,7 @@
 
 UML ist kein verbindlicher ISO-Standard, erfährt aber trotzdem eine hohe Akzeptanz durch die Industrie.\\
 
-Die Spezifikation von UML (\cite{UML17}) durch die \textbf{OMG} (\textit{Object Management Group}\footnote{
+Die Spezifikation von UML (\cite{OMG17}) durch die \textbf{OMG} (\textit{Object Management Group}\footnote{
     \url{https://omg.org}, abgerufen 29.04.2024
 }) umfasst vier Teile:
 
