--- a/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
@@ -68,7 +68,7 @@ Es gibt zwei unterschiedliche Notationen für Properties: Die \textbf{Attribut}-
         $0..3,\quad 7,\quad 9..*\quad$ von null bis drei oder \textbf{genau sieben} oder größer oder gleich neun
     }\\
     sowie in der Spezifikation:\\
-    \blockquote[{\cite[35]{UML17}}]{
+    \blockquote[{\cite[35]{OMG17}}]{
         If the lower bound is equal to the upper bound, then an alternate notation is to use a string containing just the upper
         bound.
     }\\
@@ -213,7 +213,7 @@ Vor- und Nachbedingungen können auch in OCL formuliert und in einer Textdatei a
     Hierbei handelt es sich aber richtigerweise um sog. \textit{guillemets}\footnote{
         \url{https://de.wikipedia.org/wiki/Guillemets}, abgerufen 02.05.2024
     }.\\
-    S. hierzu auch \cite[745]{UML17}.
+    S. hierzu auch \cite[745]{OMG17}.
 \end{tcolorbox}
 
 \subsection*{Generalisierung}
