--- a/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
@@ -15,7 +15,7 @@ s. Abschnitt~\ref{sec:sprachaufbau-der-uml-2.0}
 \begin{figure}
     \centering
     \includegraphics[scale=0.5]{part three/Sequenzdiagramme/img/interaktionsrahmen}
-    \caption{Interaktionsrahmen. \textbf{sd} steht für \textit{Sequence Diagram} (Quelle: in Anlehnung an \cite[596]{UML17})}
+    \caption{Interaktionsrahmen. \textbf{sd} steht für \textit{Sequence Diagram} (Quelle: in Anlehnung an \cite[596]{OMG17})}
     \label{fig:interaktionsrahmen}
 \end{figure}
 
