--- a/docs/repetitorium/part three/Sequenzdiagramme/index.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/index.tex
@@ -4,6 +4,7 @@
 \input{part three/Sequenzdiagramme/lernziele}
 \newpage
 \input{part three/Sequenzdiagramme/einsatzbereich}
+\input{part three/Sequenzdiagramme/begriffe und elemente}
 
 
 \newpage
