docs: add zusammenfassung

--- a/docs/repetitorium/part three/Sequenzdiagramme/index.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/index.tex
@@ -5,7 +5,7 @@
 \newpage
 \input{part three/Sequenzdiagramme/einsatzbereich}
 \input{part three/Sequenzdiagramme/begriffe und elemente}
-
+\input{part three/Sequenzdiagramme/zusammenfassung}
 
 \newpage
 
