docs: add chapter Klassendiagramm - erweiterte Konzepte und Paketdiagramme

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -223,6 +223,7 @@
 	\input{part three/Einführung/index}
 	\input{part three/Klassendiagramme/index}
 	\input{part three/Sequenzdiagramme/index}
+	\input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
