--- a/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
@@ -214,7 +214,8 @@ Vor- und Nachbedingungen können auch in OCL formuliert und in einer Textdatei a
     Hierbei handelt es sich aber richtigerweise um sog. \textit{guillemets}\footnote{
         \url{https://de.wikipedia.org/wiki/Guillemets}, abgerufen 02.05.2024
     }.\\
-    S. hierzu auch \cite[745]{OMG17}.
+    S. hierzu auch \cite[745]{OMG17}.\\
+    Korrektur im Skript bei \cite[39]{Buh09}.
 \end{tcolorbox}
 
 \subsection*{Generalisierung}
