docs: update bib refs and meta information

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -441,3 +441,14 @@ and Rundshagen, Michael",
     author={Liskov, Barbara},
     year={1987}
 }
+
+@book{GHJV94,
+    title={Design Patterns: Elements of Reusable Object-Oriented Software},
+    author={Gamma, E. and Helm, R. and Johnson, R. and Vlissides, J.},
+    isbn={9780321700698},
+    lccn={94034264},
+    series={Addison-Wesley Professional Computing Series},
+    url={https://books.google.de/books?id=6oHuKQe3TjQC},
+    year={1994},
+    publisher={Pearson Education}
+}
