--- a/docs/repetitorium/part two/Objektorientierter Entwurf/prinzipien guten entwurfs.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/prinzipien guten entwurfs.tex
@@ -58,7 +58,7 @@ Dennoch spricht folgendes für eine Zerlegung:
 \end{itemize}
 
 
-\subsection{Hohe Kohäsion}
+\subsection{Hohe Kohäsion}\label{subsec:hohe-kohasion}
 Erfolgt eine Zerlegung in Pakete oder Klassen, müssen die einzelnen Teile in einem funktionierenden System so gestaltet sein, dass sie miteinander zusammenarbeiten.\\
 Arbeiten Teile miteinander zusammen, hängen sie aber auch in einer bestimmten Art und Weise voneinander ab.\\
 Dies wirkt sich auf das Verständnis bzw. Änderung einzelner Teile aus, da dann auch alle zusammenhängenden Teile verstanden bzw. u.U. geändert werden müssen.\\
