--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/index.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/index.tex
@@ -6,9 +6,11 @@
 
 \input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/darstellung der erweiterten konzepte}
 \input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/begriffe und elemente in klassendiagrammen}
+\input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen}
+\input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/begriffe und elemente in paketdiagrammen}
 
 \newpage
-
+\input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/zusammenfassung}
 
 \newpage
 
