docs: update index and meta data

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -224,6 +224,7 @@
 	\input{part three/Klassendiagramme/index}
 	\input{part three/Sequenzdiagramme/index}
 	\input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/index}
+	\input{part three/Anwendungsfalldiagramm/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
