--- a/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Klassendiagramme/begriffe und elemente.tex
@@ -1,4 +1,4 @@
-\section{Begriffe und Elemente}
+\section{Begriffe und Elemente}\label{sec:klassendiagramme-begriffe-und-elemente}
 
 \subsection{Properties}
 Es gibt zwei unterschiedliche Notationen für Properties: Die \textbf{Attribut}- und die \textbf{Assoziationsnotation}.
