docs: update index

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -225,6 +225,7 @@
 	\input{part three/Sequenzdiagramme/index}
 	\input{part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/index}
 	\input{part three/Anwendungsfalldiagramm/index}
+	\input{part three/Aktivitätsdiagramme/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
