docs: add section begriffe und elemente

--- a/docs/repetitorium/part three/Aktivitätsdiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Aktivitätsdiagramme/begriffe und elemente.tex
@@ -1,4 +1,4 @@
-\section{Begriffe und Elemente}
+\section{Begriffe und Elemente}\label{sec:aktivitaetsdiagramme-begriffe-und-elemente}
 
 In \textbf{Aktivitätsdiagrammen} werden \textbf{Aktivitäten} modelliert, die \textbf{Aktivitätsknoten} und \textbf{Aktivitätskanten} enthalten.
 
